Better grunt structure

--- a/src/.jshintrc
+++ b/src/.jshintrc
@@ -7,9 +7,10 @@
   "noarg": true,
   "sub": true,
   "undef": true,
-  "unused": true,
+  "unused": false,
+  "loopfunc": true,
   "boss": true,
   "eqnull": true,
-  "node": true,
-  "es5": true
+  "browser": true,
+  "predef": ["jQuery"]
 }
