--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
 		"grunt-contrib-jshint": "~0.1.1",
 		"grunt-contrib-uglify": "~0.1.1",
 		"grunt-contrib-watch": "~0.2.0",
+		"grunt-contrib-clean": "~0.4.0",
+		"grunt-contrib-copy": "~0.4.0",
 		"grunt-contrib-cssmin": "~0.6.0",
+		"grunt-replace": "~0.4.4",
 		"grunt": "~0.4.1"
 	}
 }
