--- a/src/.jshintrc
+++ b/src/.jshintrc
@@ -12,5 +12,5 @@
   "boss": true,
   "eqnull": true,
   "browser": true,
-  "predef": ["jQuery","define"]
+  "predef": ["jQuery","define","Event"]
 }
